--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #Çý¶¯Ãû³Æ
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.open-in-view=false
+server.servlet.session.tracking-modes=cookie
 
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
 spring.jpa.properties.hibernate.search.default.indexBase = D:/bmIndex/
