--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.servlet.context-path=/BM
 server.port = 8181
 
 logging.level.root = info
+logging.file.path=./logs
 logging.level.org.springframework.web.servlet.DispatcherServlet=info
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.SQL =debug
@@ -23,3 +24,6 @@ server.servlet.session.tracking-modes=cookie
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
 spring.jpa.properties.hibernate.search.default.indexBase = D:/bmIndex/
 spring.jpa.properties.hibernate.search.analyzer=com.hankcs.lucene.HanLPAnalyzer
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.file-size-threshold=-1
