--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,24 @@
-#server\u914D\u7F6E
 server.servlet.context-path=/BM
-#SSL\u5F00\u542F\uFF08\u5F00\u542Fssl\u540E\uFF0C\u4E3AHttps\u7AEF\u53E3\uFF09
 server.port = 8181
 
 logging.level.root = info
 logging.file.path=./logs
 logging.level.org.springframework.web.servlet.DispatcherServlet=info
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.SQL =debug
-server.servlet.session.tracking-modes=cookie
 
 
-#spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
-#\u8868\u7ED3\u6784\u7531hibernate\u6839\u636E\u5B9E\u4F53\u7C7B\u6765\u5E2E\u4F60\u521B\u5EFA
-#spring.jpa.generate-ddl=false
-#\u6570\u636E\u5E93\u6587\u4EF6\u4F4D\u7F6E
-#spring.datasource.url=jdbc:sqlite::resource:static/db/bookmark
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bookmark?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/exms20200520?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
-spring.datasource.password=root
-spring.datasource.username=root
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.format_sql=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:db/bookmark
 spring.jpa.open-in-view=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#\u9A71\u52A8\u540D\u79F0
-#spring.datasource.driver-class-name=org.sqlite.JDBC
-#spring.jpa.open-in-view=false
-#server.servlet.session.tracking-modes=cookie
 
 spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
 spring.jpa.properties.hibernate.search.default.indexBase = D:/bmIndex/
 spring.jpa.properties.hibernate.search.analyzer=com.hankcs.lucene.HanLPAnalyzer
 
 spring.servlet.multipart.max-file-size=-1
-spring.servlet.multipart.file-size-threshold=-1
+
+
+# 业务
+bookmark.target=chrome
