修改为基于sqllite实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,13 @@ spring.datasource.url=jdbc:sqlite:db/bookmark
 spring.jpa.open-in-view=true
 
 
-spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
-spring.jpa.properties.hibernate.search.default.indexBase = D:/bmIndex/
-spring.jpa.properties.hibernate.search.analyzer=com.hankcs.lucene.HanLPAnalyzer
+
+#spring.jpa.properties.hibernate.search.default.directory_provider = filesystem
+#spring.jpa.properties.hibernate.search.default.indexBase = D:/bmIndex/
+#spring.jpa.properties.hibernate.search.analyzer=com.hankcs.lucene.HanLPAnalyzer
 
 spring.servlet.multipart.max-file-size=-1
 
 
 # 业务
-bookmark.target=chrome
+bookmark.browser=chrome
